--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context="pt.simdea.guestlist.MainActivity">
+        tools:context="pt.simdea.guestlist.ui.main.MainActivity">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
@@ -28,7 +28,7 @@
                     app:layout_scrollFlags="scroll|enterAlways"
                     app:titleTextColor="@android:color/white" />
 
-                <pt.simdea.guestlist.MaterialSearchView
+                <pt.simdea.guestlist.ui.widgets.MaterialSearchView
                     android:id="@+id/search_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
@@ -42,7 +42,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:context="pt.simdea.guestlist.MainActivity">
+            tools:context="pt.simdea.guestlist.ui.main.MainActivity">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/listacompras"
