--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
+        android:background="@android:color/black"
         tools:context="pt.simdea.guestlist.ui.main.MainActivity">
 
         <com.google.android.material.appbar.AppBarLayout
@@ -55,6 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
+                android:textColor="@android:color/white"
                 tools:text="30"/>
 
         </RelativeLayout>
